# rust_rest_example

./: Cargo.toml  README.md
migrations/2021-05-03-132429_vehicle/: down.sql  up.sql
migrations/2021-05-05-080039_user/: up.sql
src/: lib.rs  main.rs  models.rs  repository.rs  requests.rs  schema.rs
