[package]
name = "restful_rusty_rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["postgres"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
dotenv = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"

[dependencies.rocket]
version = "0.4.7"
features = ["private-cookies"]

[dependencies.rocket_contrib]
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
